2004-05-15 Terry <tbiggs@users.sf.net>

	* revomed backend/mgr.hh and backend/mgr.cc
	* revomed backend/sword_defs.h
	
	
2004-05-14 Terry <tbiggs@users.sf.net>

	* revomed backend/key.hh and backend/key.cc
	* revomed main/key.h and main/key.c
	

2004-05-13 Terry <tbiggs@users.sf.net>

	* revomed main/search.h and main/search.c
	* revomed main/module.h and main/module.c
	

2004-04-21 Terry <tbiggs@users.sf.net>

	* added main/search_dialog.cc and main/search_dialog.h
	* added main/search_sidebar.cc and main/search_sidebar.h
	* removed backend/dialogs.cc and backend/dialogs.hh


2004-04-07 Terry <tbiggs@users.sf.net>

	* removed backend/tree.cc and backend/tree.hh
	* removed gui/gtkhtml_display.h and gnome2/gtkhtml_display.c
		

2004-04-02 Terry <tbiggs@users.sf.net>

	* added gnome2/note_editor.c and gui/note_editor.h
	* added gnome2/note_toolbar_edit.c and gui/note_toolbar_edit.h
	* added gnome2/note_toolbar_style.c and gui/note_toolbar_style.h
	* removed gnome2/percomm.c and gui/percomm.h
	

2004-03-30  Terry <tbiggs@users.sf.net>

	* completely reworked gnome2/commentary_dialog.c
	* completely reworked gnome2/dictionary_dialog.c
	* completely reworked gnome2/gbs_dialog.c
	* removed gui/commentary_menu.h and gnome2/commentary_menu.c
	* removed gui/dictionary_menu.h and gnome2/dictionary_menu.c
	* removed gui/gbs_menu.h and gnome2/gbs_menu.c
	* removed gui/gbs_display.h and gnome2/gbs_display.c
	* removed main/gbs.h and main/gbs.c
	* added pixmaps from the Epiphany project
	* epiphany-bookmark-page.png
	* epiphany-bookmarks.png
	* epiphany-secure.png
	* epiphany-unsecure.png


2004-03-15  Terry <tbiggs@users.sf.net>

	* completely reworked gnome2/bibletext_dialog.c
	* removed gui/bibletext_menu.h and gnome2/bibletext_menu.c
	* added main/module_dialogs.cc and main/module_dialogs.h
	
	
2004-03-11  Terry <tbiggs@users.sf.net>

	* added backend/sword_main.cc and backend/sword_main.hh
	

2004-03-03  Terry <tbiggs@users.sf.net>
